# Calibration-Camera-AugReal

./: CMakeLists.txt  Makefile  augReal.cpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  out_camera_data.xml
